# qa_guru_18_lesson

./: README.md  pyproject.toml
