[tool.poetry]
name = "qa-guru-18-lesson"
version = "0.1.0"
description = ""
authors = ["Streshneva Kristina <strashneva@proitr.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_18_lesson"}]

[tool.poetry.dependencies]
python = "^3.9"
selene = "2.0.0rc2"
selenium = "4.4.3"
pytest = "7.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
